@startuml

class SecurityConfig {
    -OAuthUserGoogleService oAuthUserGoogleService
    +configure(HttpSecurity http)
}

class OAuthUserGoogleService {
    +loadUser(OAuth2UserRequest userRequest): OAuth2User
}

class OAuthUserGoogle {
    +getAttributes(): Map
    +getAuthorities(): Collection
    +getName(): String
    +getEmail(): String
}

class LoginController {
    -OAuthUserGoogleService oAuthUserGoogleService
    +login(): String
    +loginAuth(): String
    +loginWithGoogle(): String
    +checkService(): String
}

SecurityConfig --> OAuthUserGoogleService: uses
LoginController --> OAuthUserGoogleService: uses
OAuthUserGoogleService --> OAuthUserGoogle: creates

@enduml